--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Mu's blog
-bio:                
-description:        
+bio:                Hello World. Mu is coming!  
+description:        Hi there, I'm Mu and I'm new to the world of computer science. Currently, I'm in the process of learning the fundamentals of programming languages like Python and C++, while also exploring various areas within the field, including cybersecurity, artificial intelligence, and web development. My passion for technology has inspired me to start this blog where I can share my experiences and insights as a beginner in computer science. My aim is to offer useful resources and tips to fellow beginners who are just starting out. Additionally, I'm eager to connect with other people in the field and learn from their experiences and perspectives. Please don't hesitate to reach out to me if you have any tips or advice, or if you'd just like to discuss all things tech. Together, I believe we can learn and grow as computer scientists. Thank you for joining me on this exciting journey!
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
