--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
 # Site navigation links
 
-- title: Mu's blog
-  url: https://mu-1104.github.io/
+- title: Projects
+  url: https://mu-1104.github.io/projects/
